# heat-pump-planning-scraping

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: buildwithtract_authority_mapping.csv
results/: poc_sample_applications.csv
rules/: README.md  app_type_rules.toml  authority_region_fallback.csv  decision_rules.toml  edge_case_keywords.toml  mcs_authority_overrides.csv  mcs_lpa_overrides.csv  postcode_to_region.csv  refusal_reason_keywords.toml
scripts/: 02_summarise_document_backends.py  03_fetch_document_listing.py  analyse_decision_patterns.py  build_la_year_matrix.py  build_refused_withdrawn_table.py  cluster_refusal_reasons.py  docling_full_run.py  docling_pilot_build_candidates.py  download_documents.py  download_documents_agile.py  download_documents_aifusion.py  download_documents_bathnes_custom.py  download_documents_civica_w2.py  download_documents_elmbridge.py  download_documents_eocella.py  download_documents_eplanningviewer.py  download_documents_guernsey_direct.py  download_documents_herefordshire.py  download_documents_idox.py  download_documents_msp_idox.py  download_documents_mvm.py  download_documents_necs_assure.py  download_documents_nipp.py  download_documents_northgate.py  download_documents_ocella.py  download_documents_ocella_casetracker.py  download_documents_oracle_ords.py  download_documents_planning_docs.py  download_documents_planning_register.py  download_documents_planningexplorer_mvc.py  download_documents_planportal.py  download_documents_publisher.py  download_documents_smartadmin.py  extract_converter_texts.py  extract_decision_texts.py  extract_docx_texts.py  extract_full_corpus_texts.py  extract_nonpdf_texts.py  extract_refusal_text.py  merge_local_idox_retry_to_vps.py  (+12 more)
src/: agile_scraper.py  aifusion_scraper.py  ashp_local_explore.py  authority_lpa_lookup.py  bathnes_custom_scraper.py  civica_cx_scraper.py  config.py  db.py  download_runner.py  elmbridge_scraper.py  eocella_scraper.py  eplanningviewer_scraper.py  generic_route_recovery.py  guernsey_direct_scraper.py  herefordshire_scraper.py  idox_scraper.py  jersey_custom_scraper.py  liverpool_doc_explorer_scraper.py  msp_idox_scraper.py  mvm_scraper.py  necs_assure_scraper.py  nipp_scraper.py  northgate_scraper.py  ocella_casetracker_scraper.py  ocella_scraper.py  oracle_ords_scraper.py  pdf_extract.py  pdf_quality.py  planit_client.py  planit_source_recovery.py  planning_docs_scraper.py  planning_register_scraper.py  planningexplorer_mvc_scraper.py  planportal_scraper.py  portal_classification.py  publisher_scraper.py  shale_dialog_scraper.py  smartadmin_scraper.py  unidoc_scraper.py
tests/: test_agile_scraper.py  test_batch_extract.py  test_build_corpus_sample.py  test_db.py  test_download_documents_idox_filter.py  test_elmbridge_scraper.py  test_expand_idox_documents.py  test_extract_decision_texts.py  test_generic_route_recovery.py  test_herefordshire_scraper.py  test_idox_scraper.py  test_northgate_scraper.py  test_ocella_scraper.py  test_pdf_extract.py  test_pdf_quality.py  test_pins_match_appeals.py  test_planit_client.py  (+3 more)
(+69 files in other folders)
