[project]
name = "ashp-planning-scraper"
version = "0.1.0"
description = "Scraper for UK ASHP planning applications and documents"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "truststore>=0.10.4",
]

[project.optional-dependencies]
# Planning Inspectorate appeals pipeline (scripts/pins/): reads XLSX, writes parquet.
pins = [
    "pandas>=2.0",
    "pyarrow>=15.0",
    "openpyxl>=3.1",
]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.11.6",
    # Pulls in the pins deps so the full test suite (incl. test_pins_match_appeals) collects.
    "ashp-planning-scraper[pins]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["_local", "build", "dist"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["E402"]
"scripts/open_ashp_progress_dashboard.py" = ["E402", "E501"]
